--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
     <title>documneto original</title>
 </head>
 <body>
-    
+    <nav>
+        <ul class="w3-navbar w3-indigo">
+            <li><a href="#">Home</a></li>
+            <li><a href="mostrar.html">mostrar</a></li>
+            <li><a href="alta1.html">altas</a></li>
+            <li><a href="#">buscar</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
